# fluxus-contracts

./: .env-prod.example  .env.example  .gitignore  Cargo.toml  Makefile  README.md  actions_of_strat.rs  build.sh  multi_fungible_token.rs  package-lock.json  package.json
.github/workflows/: build_and_test.yml
fluxus-safe/: .env.example  Cargo.toml  Makefile  README.md  build.sh
fluxus-safe/res/: fluxus_safe.wasm  jumbo_exchange_local.wasm  jumbo_farming_local.wasm  proxy_contract_local.wasm
fluxus-safe/scripts/: add_stable_strategy.sh  add_strat_safe010.sh  add_strategy.sh  auto_compound.sh  build.sh  deploy.sh  initialize.sh  mft_test.sh  owner.sh  pemb_view.sh  pembrock_add_strategy.sh  pembrock_register.sh  pembrock_stake_process.sh  run.sh  stake_process.sh  unstake_process.sh  views.sh
fluxus-safe/scripts/jumbo/: deploy.sh  harvest.sh
fluxus-safe/scripts/neardev/: dev-account  dev-account.env
fluxus-safe/scripts/pembrock/: add_strategy.sh  deploy.sh  deploy_all.sh  deploy_strats.sh  harvest.sh  initialize.sh  register.sh  run.sh  stake.sh  unstake.sh  views.sh
fluxus-safe/scripts/pembrock/neardev/: dev-account  dev-account.env
fluxus-safe/scripts/ref_finance/: .env.example  add_strategy.sh  initialize.sh  run.sh  unstake_process.sh
fluxus-safe/scripts/ref_stable/: .env.example  auto_compound.sh  run.sh  views.sh
fluxus-safe/src/: account_deposit.rs  actions_of_compounder.rs  actions_of_strat.rs  admin_fee.rs  auto_compound.rs  auto_compounder.rs  callback.rs  errors.rs  external_contracts.rs  fluxus_strat.rs  jumbo_auto_compound.rs  jumbo_auto_compounder.rs  lib.rs  multi_fungible_token.rs  owner.rs  pembrock_auto_compounder.rs  stable_auto_compound.rs  stable_auto_compounder.rs  storage_impl.rs  token_receiver.rs  utils.rs  views.rs
fluxus-safe/src/jumbo/: jumbo_auto_compound.rs  jumbo_auto_compounder.rs  mod.rs
fluxus-safe/src/pembrock/: mod.rs  pembrock_actions_of_compounder.rs  pembrock_auto_compounder.rs
fluxus-safe/src/ref_finance/: actions_of_compounder.rs  auto_compound.rs  auto_compounder.rs  mod.rs  stable_auto_compound.rs  stable_auto_compounder.rs
fluxus-safe/tests/: general.rs  jumbo_general.rs  mft_tests.rs  two_strategies.rs  utils.rs
fluxus-treasurer/: .env.example  .gitignore  Cargo.toml
fluxus-treasurer/res/: fluxus_treasurer.wasm
fluxus-treasurer/scripts/: build.sh  initialize.sh  run.sh  withdraw.sh
fluxus-treasurer/src/: errors.rs  external_contracts.rs  lib.rs  managed_tokens.rs  stakeholders.rs
res/: auto_compounder.wasm
scripts/: add_strategy.sh  auto_compound.sh  build.sh  create.sh  croncat.sh  deploy_prod.sh  init.sh  initialize.sh  owner.sh  run.sh  run2_0.sh  safe.sh  stake_process.sh  test.sh  unstake_process.sh  views.sh
src/: account_deposit.rs  actions_of_compounder.rs  actions_of_strat.rs  auto_compouder.rs  auto_compound.rs  auto_compounder.rs  external_contracts.rs  fluxus_strat.rs  lib.rs  owner.rs  storage_impl.rs  token_receiver.rs  utils.rs  views.rs
tests/: general.rs  utils.rs
