[package]
name = "auto_compounder"
version = "0.1.1"
authors = ["Pollum"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.3"}
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.3" } 
futures = "0.3"
log = "0.4"
console_log = { version = "0.2", optional = true }
