[package]
name = "auto_compounder"
version = "0.1.5"
authors = ["Pollum"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.6"}
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.6" } 
futures = "0.3"
log = "0.4"
console_log = { version = "0.2", optional = true }
uint = "0.8"


[dev-dependencies]
workspaces = { git = "https://github.com/near/workspaces-rs", tag = "0.2.1" }
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
