[package]
name = "fluxus-safe"
version = "0.2.0"
authors = ["Pollum"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.9"}
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.9" } 
futures = "0.3"
log = "0.4"
console_log = { version = "0.2", optional = true }
uint = "0.8"
percentage = "0.1.0"
substring = "1.4.5"

[dev-dependencies]
workspaces = { git = "https://github.com/near/workspaces-rs", tag = "0.2.1" }
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
substring = "1.4.5"