[package]
name = "fluxus_treasurer"
version = "0.1.1"
authors = ["Pollum"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.9"}
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.9" } 
percentage = "0.1.0"

[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "z"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true